--- a/rush-houp/src/REACT-RUSH-HOUR-HOME/RUSH-HOUR-HOME/HOME-CSS/Car.css
+++ b/rush-houp/src/REACT-RUSH-HOUR-HOME/RUSH-HOUR-HOME/HOME-CSS/Car.css
@@ -1,7 +1,7 @@
 .Player{
     width: 107px;
     height: 50px;
-    position: fixed;
-    top: 62px;
-    left: 5px;
+    position:fixed;
+    top: 362px;/*57px 씩 더해주기*/
+    left: 305px;/*57px 씩 더해주기*/
 }
