--- a/rush-houp/src/REACT-RUSH-HOUR-HOME/RUSH-HOUR-HOME/HOME-CSS/Body.css
+++ b/rush-houp/src/REACT-RUSH-HOUR-HOME/RUSH-HOUR-HOME/HOME-CSS/Body.css
@@ -2,7 +2,8 @@
     position:fixed;
     width: 100%;
     height: 100%;
-    background-color: darkslategrey;
+    background-color: #edc70a;
+    
     left:0%;
     top:0%;
 }
